# rss-to-archive.org

./: .env.example  .gitignore  README.md  pyproject.toml
rss_to_archive_org/: feeds.py  main.py
tests/: test_main.py
