[tool.poetry]
name = "rss-to-archive-org"
version = "0.1.0"
description = ""
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"
packages = [{ include = "rss_to_archive_org" }]

[tool.poetry.dependencies]
python = "^3.12"
reader = "^3.10"
python-dotenv = "^1.0.0"
requests-mock = "^1.11.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.ruff]
fix = true
unsafe-fixes = true
preview = true
select = ["ALL"]
ignore = [
  "CPY001", # Missing copyright notice at top of file
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/tests/**" = [
  "S101",    # Allow asserts
  "ARG",     # Allow unused arguments
  "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  "PLR2004", # Allow "assert response.status_code == 200" when testing views
  "D102",    # Allow missing docstrings in tests
  "PLR6301", # Checks for the presence of unused self parameter in methods definitions.
]
